welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:6: error: type mismatch;
 found   : Unit
 required: Boolean
      c=Test();
            ^SnakeBuggle:26: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^SnakeBuggle:26: warning: enclosing method Test has result type Unit: return value discarded
      return true
      ^SnakeBuggle:33: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^SnakeBuggle:33: warning: enclosing method Test has result type Unit: return value discarded
    return true
    ^SnakeBuggle:36: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^SnakeBuggle:36: warning: enclosing method Test has result type Unit: return value discarded
  return false
  ^